{{$NEXT}}

0.51     2016-09-18

[BUG FIXES]

- Restored some exports to Code::TidyAll::Util for backwards
  compatibility. Some other plugins are using these exports.


0.50     2016-09-18

[BACKWARDS INCOMPATIBILITIES]

- Converted (almost) all file handling to use Path::Tiny. This should help
  make the code and tests more cross-platform, and simplifies various bits of
  internal code. Note that plugins now receive paths as Path::Tiny objects,
  which could break code that checks if what it receives is a plain scalar.

[ENHANCEMENTS]

- Added support for tidying in multiple parallel jobs at once. You can pass a
  "--jobs" argument to tidyall or pass a "jobs" param to
  Code::TidyAll->new. This requires that you install Parallel::ForkManager.
- Paths in error messages now include the full relative path to the file being
  tidied. Previously this would just be something like "Foo.pm", now it will
  be "lib/My/Package/Foo.pm".


0.49     2016-07-22

- The verbose output now just shows the plugin name in the "applying the
  following plugins: ..." message, rather than stringifying the plugin
  objects.


0.48     2016-06-16

- The Git pre-commit hook now only looks at the files that are staged for
  committing, rather than everything in the git repo that has been
  modified. Note that this does not change the tidyall script's "-g" flag,
  which still operates on all modified files in the repo.

- Check the exit code when running js-beautify and throw an error if this is
  non-zero. Patch by Graham Knop. GitHub #61.


0.46     2016-04-17

- Fix a use line which specified the required version of Text::Diff as
  "v1.44". This caused weirdness to cascade in the Makefile.PL. Reported by
  Olaf Alders. GitHub #60.


0.45     2016-04-11

- Some changes intended to be internal-only in the last release broke the
  handling of ignore and select config lines with multiple space-separated
  values. This should now work again (and is tested). Reported by Martin